--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ repositories {
 ext['springCloudVersion'] = 'Greenwich.RC1'
 
 dependencies {
-	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	//implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
     implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
