--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,23 @@
 server:
   port: 9090
 
+spring:
+  security:
+    user:
+      name: user
+      password: user.password
+
 oauth2:
   client:
     id: clientapp
     secret: secret.clientapp
-    
-security:
-  username: user
-  password: user.password
-  
+    redirect-uri: http://localhost:9091
+    access-token-validity-seconds: 60
+    refresh-token-validity-seconds: 120
+
+jwt:
+  signature: jwt.signature
+
 management:
   endpoints:
     web:
