--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,17 @@ oauth2:
   client:
     id: clientapp
     secret: secret.clientapp
+    redirect-uri: http://localhost:9091
+    access-token-validity-seconds: 60
+    refresh-token-validity-seconds: 120
     
 security:
   username: user
   password: user.password
-  
+
+jwt:
+  signature: jwt.signature
+
 management:
   endpoints:
     web:
