--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,12 @@ ext['springCloudVersion'] = 'Greenwich.RC1'
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-actuator')
 	//implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-data-redis')
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
     implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.cloud:spring-cloud-starter-oauth2')
+	implementation('redis.clients:jedis:2.9.0')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	runtimeOnly('com.h2database:h2')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
