--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,9 +15,11 @@ spring:
       enabled: true
       path: /h2-console
       
-security:
-  username: user
-  password: user.password
-  
-jwt:
-  signature: jwt.signature
+  redis:
+    host: localhost
+    port: 6379
+      
+  security:
+    user:
+      name: user
+      password: user.password
