--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,18 +2,23 @@ server:
   port: 9090
 
 spring:
+  datasource:
+    jdbc-url: jdbc:h2:mem:oauth2
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+    hikari:
+      maximum-pool-size: 5
+      
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      
   security:
     user:
       name: user
       password: user.password
-
-oauth2:
-  client:
-    id: clientapp
-    secret: secret.clientapp
-    redirect-uri: http://localhost:9091/callback
-    access-token-validity-seconds: 60
-    refresh-token-validity-seconds: 120
 
 jwt:
   signature: jwt.signature
