--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 ext['springCloudVersion'] = 'Greenwich.RC1'
 
 dependencies {
+	implementation('io.jsonwebtoken:jjwt-api:0.10.5')
     implementation('org.springframework.boot:spring-boot-starter-actuator')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-security')
@@ -34,6 +35,8 @@ dependencies {
 	implementation('org.springframework.cloud:spring-cloud-starter-oauth2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
     runtimeOnly('com.h2database:h2')
+    runtimeOnly('io.jsonwebtoken:jjwt-impl:0.10.5')
+	runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.10.5')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
